clusters/hybrid01/config/element/element-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: element
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
