clusters/hybrid01/config/element/element-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element
  namespace: element
  labels:
    app: element
  annotations:
    configmap.reloader.stakater.com/reload: "element"
spec:
  replicas: 3
  priorityClassName: matrix
  automountServiceAccountToken: false
  securityContext: 
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1000
    fsGroup: 1000
    allowPrivilegeEscalation: false
  selector:
    matchLabels:
      app: element
  template:
    metadata:
      labels:
        app: element
    spec:
      hostUsers: false
      containers:
      - image: vectorim/element-web:v1.12.30
        name: element
        securityContext: 
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          fsGroup: 1000
          allowPrivilegeEscalation: false
        ports:
          - name: element
            containerPort: 8080
            protocol: TCP
        volumeMounts:
        - name: element-config
          mountPath: /app/config.json
          subPath: config.json
        resources:
          requests:
            cpu: 10m
            memory: 30Mi
          limits:
            memory: 50Mi
      volumes:
      - name: element-config
        configMap:
          name: element
