clusters/hybrid01/config/element/element-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: element
  name: element
  namespace: element
spec:
  ports:
  - name: element
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: element
  type: ClusterIP
