clusters/hybrid01/config/element/element-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: element-external
  namespace: element
spec:
  hosts:
  - "element.justmeowing.net"
  gateways:
  - istio-external-gateway/external-gateway
  http:
  - route:
    - destination:
        host: element
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: element-internal
  namespace: element
spec:
  hosts:
  - "element.justmeowing.net"
  gateways:
  - istio-internal-gateway/internal-gateway
  http:
  - route:
    - destination:
        host: element
        port:
          number: 8080
